add ram freeer